<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="amount">Amount</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="error_occurred">Error occurred</string>
    <string name="amount_is_incorrect">Amount is incorrect</string>
    <string name="empty"/>
    <string name="_1inch">1inch</string>
    <string name="ada">ada</string>
    <string name="aed">aed</string>
    <string name="afn">afn</string>
    <string name="algo">algo</string>
    <string name="all">all</string>
    <string name="amd">amd</string>
    <string name="ang">ang</string>
    <string name="aoa">aoa</string>
    <string name="ars">ars</string>
    <string name="atom">atom</string>
    <string name="aud">aud</string>
    <string name="avax">avax</string>
    <string name="awg">awg</string>
    <string name="azn">azn</string>
    <string name="bam">bam</string>
    <string name="bbd">bbd</string>
    <string name="bch">bch</string>
    <string name="bdt">bdt</string>
    <string name="bgn">bgn</string>
    <string name="bhd">bhd</string>
    <string name="bif">bif</string>
    <string name="bmd">bmd</string>
    <string name="bnb">bnb</string>
    <string name="bnd">bnd</string>
    <string name="bob">bob</string>
    <string name="brl">brl</string>
    <string name="bsd">bsd</string>
    <string name="btc">btc</string>
    <string name="btn">btn</string>
    <string name="busd">busd</string>
    <string name="bwp">bwp</string>
    <string name="byn">byn</string>
    <string name="byr">byr</string>
    <string name="bzd">bzd</string>
    <string name="cad">cad</string>
    <string name="cdf">cdf</string>
    <string name="chf">chf</string>
    <string name="chz">chz</string>
    <string name="clf">clf</string>
    <string name="clp">clp</string>
    <string name="cny">cny</string>
    <string name="cop">cop</string>
    <string name="crc">crc</string>
    <string name="cro">cro</string>
    <string name="cuc">cuc</string>
    <string name="cup">cup</string>
    <string name="cve">cve</string>
    <string name="czk">czk</string>
    <string name="dai">dai</string>
    <string name="djf">djf</string>
    <string name="dkk">dkk</string>
    <string name="doge">doge</string>
    <string name="dop">dop</string>
    <string name="dot">dot</string>
    <string name="dzd">dzd</string>
    <string name="egld">egld</string>
    <string name="egp">egp</string>
    <string name="enj">enj</string>
    <string name="ern">ern</string>
    <string name="etb">etb</string>
    <string name="etc">etc</string>
    <string name="eth">eth</string>
    <string name="eur">eur</string>
    <string name="fil">fil</string>
    <string name="fjd">fjd</string>
    <string name="fkp">fkp</string>
    <string name="ftt">ftt</string>
    <string name="gbp">gbp</string>
    <string name="gel">gel</string>
    <string name="ggp">ggp</string>
    <string name="ghs">ghs</string>
    <string name="gip">gip</string>
    <string name="gmd">gmd</string>
    <string name="gnf">gnf</string>
    <string name="grt">grt</string>
    <string name="gtq">gtq</string>
    <string name="gyd">gyd</string>
    <string name="hkd">hkd</string>
    <string name="hnl">hnl</string>
    <string name="hrk">hrk</string>
    <string name="htg">htg</string>
    <string name="huf">huf</string>
    <string name="icp">icp</string>
    <string name="idr">idr</string>
    <string name="ils">ils</string>
    <string name="imp">imp</string>
    <string name="inj">inj</string>
    <string name="inr">inr</string>
    <string name="iqd">iqd</string>
    <string name="irr">irr</string>
    <string name="isk">isk</string>
    <string name="jep">jep</string>
    <string name="jmd">jmd</string>
    <string name="jod">jod</string>
    <string name="jpy">jpy</string>
    <string name="kes">kes</string>
    <string name="kgs">kgs</string>
    <string name="khr">khr</string>
    <string name="kmf">kmf</string>
    <string name="kpw">kpw</string>
    <string name="krw">krw</string>
    <string name="ksm">ksm</string>
    <string name="kwd">kwd</string>
    <string name="kyd">kyd</string>
    <string name="kzt">kzt</string>
    <string name="lak">lak</string>
    <string name="lbp">lbp</string>
    <string name="link">link</string>
    <string name="lkr">lkr</string>
    <string name="lrd">lrd</string>
    <string name="lsl">lsl</string>
    <string name="ltc">ltc</string>
    <string name="ltl">ltl</string>
    <string name="luna">luna</string>
    <string name="lvl">lvl</string>
    <string name="lyd">lyd</string>
    <string name="mad">mad</string>
    <string name="matic">matic</string>
    <string name="mdl">mdl</string>
    <string name="mga">mga</string>
    <string name="mkd">mkd</string>
    <string name="mmk">mmk</string>
    <string name="mnt">mnt</string>
    <string name="mop">mop</string>
    <string name="mro">mro</string>
    <string name="mur">mur</string>
    <string name="mvr">mvr</string>
    <string name="mwk">mwk</string>
    <string name="mxn">mxn</string>
    <string name="myr">myr</string>
    <string name="mzn">mzn</string>
    <string name="nad">nad</string>
    <string name="ngn">ngn</string>
    <string name="nio">nio</string>
    <string name="nok">nok</string>
    <string name="npr">npr</string>
    <string name="nzd">nzd</string>
    <string name="omr">omr</string>
    <string name="one">one</string>
    <string name="pab">pab</string>
    <string name="pen">pen</string>
    <string name="pgk">pgk</string>
    <string name="php">php</string>
    <string name="pkr">pkr</string>
    <string name="pln">pln</string>
    <string name="pyg">pyg</string>
    <string name="qar">qar</string>
    <string name="ron">ron</string>
    <string name="rsd">rsd</string>
    <string name="rub">rub</string>
    <string name="rwf">rwf</string>
    <string name="sar">sar</string>
    <string name="sbd">sbd</string>
    <string name="scr">scr</string>
    <string name="sdg">sdg</string>
    <string name="sek">sek</string>
    <string name="sgd">sgd</string>
    <string name="shib">shib</string>
    <string name="shp">shp</string>
    <string name="sll">sll</string>
    <string name="sol">sol</string>
    <string name="sos">sos</string>
    <string name="srd">srd</string>
    <string name="std">std</string>
    <string name="svc">svc</string>
    <string name="syp">syp</string>
    <string name="szl">szl</string>
    <string name="thb">thb</string>
    <string name="theta">theta</string>
    <string name="tjs">tjs</string>
    <string name="tmt">tmt</string>
    <string name="tnd">tnd</string>
    <string name="top">top</string>
    <string name="trx">trx</string>
    <string name="_try">try</string>
    <string name="ttd">ttd</string>
    <string name="twd">twd</string>
    <string name="tzs">tzs</string>
    <string name="uah">uah</string>
    <string name="ugx">ugx</string>
    <string name="uni">uni</string>
    <string name="usd">usd</string>
    <string name="usdc">usdc</string>
    <string name="usdt">usdt</string>
    <string name="uyu">uyu</string>
    <string name="uzs">uzs</string>
    <string name="vef">vef</string>
    <string name="vet">vet</string>
    <string name="vnd">vnd</string>
    <string name="vuv">vuv</string>
    <string name="wbtc">wbtc</string>
    <string name="wst">wst</string>
    <string name="xaf">xaf</string>
    <string name="xag">xag</string>
    <string name="xau">xau</string>
    <string name="xcd">xcd</string>
    <string name="xdr">xdr</string>
    <string name="xlm">xlm</string>
    <string name="xmr">xmr</string>
    <string name="xof">xof</string>
    <string name="xpf">xpf</string>
    <string name="xrp">xrp</string>
    <string name="yer">yer</string>
    <string name="zar">zar</string>
    <string name="zmk">zmk</string>
    <string name="zmw">zmw</string>
    <string name="zwl">zwl</string>
</resources>