<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textAlignment="center"
        android:textColor="#8B00FF"
        android:textSize="@dimen/_35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="92dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="320dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:text="@string/from"
        android:textColor="@color/brown"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/material_card_view_from"
        app:layout_constraintEnd_toEndOf="@+id/material_card_view_from"
        app:layout_constraintStart_toStartOf="@+id/material_card_view_from" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card_view_from"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardElevation="@dimen/_0dp"
        app:layout_constraintBottom_toBottomOf="@+id/material_card_view_replace"
        app:layout_constraintEnd_toStartOf="@id/material_card_view_replace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/material_card_view_replace"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="@dimen/_1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/app_compat_spinner_from"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card_view_replace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardElevation="@dimen/_0dp"
        app:layout_constraintEnd_toStartOf="@+id/material_card_view_to"
        app:layout_constraintStart_toEndOf="@+id/material_card_view_from"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/app_compat_image_view_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/app_compat_image_view_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_compat_image_view_forward" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/text_view_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:text="@string/to"
        android:textColor="@color/brown"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/material_card_view_to"
        app:layout_constraintEnd_toEndOf="@+id/material_card_view_to"
        app:layout_constraintStart_toStartOf="@+id/material_card_view_to" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card_view_to"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardElevation="@dimen/_0dp"
        app:layout_constraintBottom_toBottomOf="@+id/material_card_view_replace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/material_card_view_replace"
        app:layout_constraintTop_toTopOf="@+id/material_card_view_replace"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="@dimen/_1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/app_compat_spinner_to"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:backgroundTint="@color/brown"
        android:hint="@string/amount"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/material_card_view_from">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="@integer/_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:backgroundTint="#8B00FF"
        android:padding="@dimen/_12dp"
        android:text="@string/convert"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_amount" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/material_card_view_result"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="@dimen/_5dp"
        app:cardElevation="@dimen/_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_convert">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8dp"
            android:paddingTop="@dimen/_24dp"
            android:paddingEnd="@dimen/_8dp"
            android:paddingBottom="@dimen/_24dp">

            <TextView
                android:id="@+id/text_view_result"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Result" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/brown"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/material_card_view_result"
        app:layout_constraintEnd_toEndOf="@+id/material_card_view_result"
        app:layout_constraintStart_toStartOf="@+id/material_card_view_result"
        app:layout_constraintTop_toTopOf="@id/material_card_view_result"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>